--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ venv/
 __pycache__/
 
 # Jupyter Notebook specific files
-.ipynb_checkpoints/
-*.ipynb
+#.ipynb_checkpoints/
+#*.ipynb
 
 # Data files (these can be large and are often regenerated or managed separately)
 data/*.csv
